--- a/DJISimulatorDemo/app/build.gradle
+++ b/DJISimulatorDemo/app/build.gradle
@@ -28,7 +28,7 @@ android {
         exclude 'META-INF/rxjava.properties'
     }
 
-    packagingOptions{
+    packagingOptions {
         doNotStrip "*/*/libdjivideo.so"
         doNotStrip "*/*/libSDKRelativeJNI.so"
         doNotStrip "*/*/libFlyForbid.so"
@@ -42,12 +42,14 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:multidex:1.0.1'
 
-    compile ('com.dji:dji-sdk:4.8')
-    provided ('com.dji:dji-sdk-provided:4.8')
+    implementation('com.dji:dji-sdk:4.8')
+    provided('com.dji:dji-sdk-provided:4.8')
 
 }
