--- a/DJISimulatorDemo/app/src/main/AndroidManifest.xml
+++ b/DJISimulatorDemo/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dji.simulatorDemo">
-
     <!-- SDK permission requirement -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -26,8 +25,6 @@
         android:name="android.hardware.usb.accessory"
         android:required="true" />
 
-    <!-- SDK requirement permission end -->
-
     <application
         android:name=".MApplication"
         android:allowBackup="true"
@@ -35,7 +32,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".ReglagesActivity"></activity>
         <!--
             ADD API_KEY HERE and make sure you
             are connected to the Internet before
@@ -45,12 +42,11 @@
             android:name="com.dji.sdk.API_KEY"
             android:value="307c738286ff0d644ce0d7e6" />
 
-        <service android:name="dji.sdk.sdkmanager.DJIGlobalService" >
-        </service>
+        <service android:name="dji.sdk.sdkmanager.DJIGlobalService" />
 
         <activity
             android:name="dji.sdk.sdkmanager.DJIAoaControllerActivity"
-            android:theme="@android:style/Theme.Translucent" >
+            android:theme="@android:style/Theme.Translucent">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
             </intent-filter>
@@ -59,9 +55,7 @@
                 android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
                 android:resource="@xml/accessory_filter" />
         </activity>
-
-        <activity android:name=".MainActivity"
-             >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
