Changement de l'interface principale et ajout de plusieurs trajectoires

--- a/DJISimulatorDemo/app/src/main/AndroidManifest.xml
+++ b/DJISimulatorDemo/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
                 android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
                 android:resource="@xml/accessory_filter" />
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden" android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
