--- a/DJISimulatorDemo/app/src/main/AndroidManifest.xml
+++ b/DJISimulatorDemo/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReglagesActivity"></activity>
+        <activity android:screenOrientation="landscape" android:configChanges="orientation|keyboardHidden" android:name=".ReglagesActivity"></activity>
         <!--
             ADD API_KEY HERE and make sure you
             are connected to the Internet before
